lib/src/ffi/y_dart_bindings_generated.dart


  late final _ydoc_observe_after_transactionPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<YSubscription> Function(
                  ffi.Pointer<YDoc>,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(ffi.Pointer<ffi.Void>,
                              ffi.Pointer<YAfterTransactionEvent>)>>)>>(
      'ydoc_observe_after_transaction');
  late final _ydoc_observe_after_transaction =
      _ydoc_observe_after_transactionPtr.asFunction<
          ffi.Pointer<YSubscription> Function(
              ffi.Pointer<YDoc>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(ffi.Pointer<ffi.Void>,
                          ffi.Pointer<YAfterTransactionEvent>)>>)>();

  ffi.Pointer<YSubscription> ydoc_observe_subdocs(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Void> state,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(
                    ffi.Pointer<ffi.Void>, ffi.Pointer<YSubdocsEvent>)>>
        cb,
  ) {
    return _ydoc_observe_subdocs(
      doc,
      state,
      cb,
    );
  }

  late final _ydoc_observe_subdocsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<YSubscription> Function(
                  ffi.Pointer<YDoc>,
                  ffi.Pointer<ffi.Void>,
                  ffi.Pointer<
                      ffi.NativeFunction<
                          ffi.Void Function(ffi.Pointer<ffi.Void>,
                              ffi.Pointer<YSubdocsEvent>)>>)>>(
      'ydoc_observe_subdocs');
  late final _ydoc_observe_subdocs = _ydoc_observe_subdocsPtr.asFunction<
      ffi.Pointer<YSubscription> Function(
          ffi.Pointer<YDoc>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<YSubdocsEvent>)>>)>();

  ffi.Pointer<YSubscription> ydoc_observe_clear(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Void> state,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<YDoc>)>>
        cb,
  ) {
    return _ydoc_observe_clear(
      doc,
      state,
      cb,
    );
  }

  late final _ydoc_observe_clearPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YSubscription> Function(
              ffi.Pointer<YDoc>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Void Function(ffi.Pointer<ffi.Void>,
                          ffi.Pointer<YDoc>)>>)>>('ydoc_observe_clear');
  late final _ydoc_observe_clear = _ydoc_observe_clearPtr.asFunction<
      ffi.Pointer<YSubscription> Function(
          ffi.Pointer<YDoc>,
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Void Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<YDoc>)>>)>();

  /// Manually send a load request to a parent document of this subdoc.
  void ydoc_load(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<YTransaction> parent_txn,
  ) {
    return _ydoc_load(
      doc,
      parent_txn,
    );
  }

  late final _ydoc_loadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<YDoc>, ffi.Pointer<YTransaction>)>>('ydoc_load');
  late final _ydoc_load = _ydoc_loadPtr.asFunction<
      void Function(ffi.Pointer<YDoc>, ffi.Pointer<YTransaction>)>();

  /// Destroys current document, sending a 'destroy' event and clearing up all the event callbacks
  /// registered.
  void ydoc_clear(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<YTransaction> parent_txn,
  ) {
    return _ydoc_clear(
      doc,
      parent_txn,
    );
  }

  late final _ydoc_clearPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<YDoc>, ffi.Pointer<YTransaction>)>>('ydoc_clear');
  late final _ydoc_clear = _ydoc_clearPtr.asFunction<
      void Function(ffi.Pointer<YDoc>, ffi.Pointer<YTransaction>)>();

  /// Starts a new read-only transaction on a given document. All other operations happen in context
  /// of a transaction. Yrs transactions do not follow ACID rules. Once a set of operations is
  /// complete, a transaction can be finished using `ytransaction_commit` function.
  ///
  /// Returns `NULL` if read-only transaction couldn't be created, i.e. when another read-write
  /// transaction is already opened.
  ffi.Pointer<YTransaction> ydoc_read_transaction(
    ffi.Pointer<YDoc> doc,
  ) {
    return _ydoc_read_transaction(
      doc,
    );
  }

  late final _ydoc_read_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YTransaction> Function(
              ffi.Pointer<YDoc>)>>('ydoc_read_transaction');
  late final _ydoc_read_transaction = _ydoc_read_transactionPtr
      .asFunction<ffi.Pointer<YTransaction> Function(ffi.Pointer<YDoc>)>();

  /// Starts a new read-write transaction on a given document. All other operations happen in context
  /// of a transaction. Yrs transactions do not follow ACID rules. Once a set of operations is
  /// complete, a transaction can be finished using `ytransaction_commit` function.
  ///
  /// `origin_len` and `origin` are optional parameters to specify a byte sequence used to mark
  /// the origin of this transaction (eg. you may decide to give different origins for transaction
  /// applying remote updates). These can be used by event handlers or `YUndoManager` to perform
  /// specific actions. If origin should not be set, call `ydoc_write_transaction(doc, 0, NULL)`.
  ///
  /// Returns `NULL` if read-write transaction couldn't be created, i.e. when another transaction is
  /// already opened.
  ffi.Pointer<YTransaction> ydoc_write_transaction(
    ffi.Pointer<YDoc> doc,
    int origin_len,
    ffi.Pointer<ffi.Char> origin,
  ) {
    return _ydoc_write_transaction(
      doc,
      origin_len,
      origin,
    );
  }

  late final _ydoc_write_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<YTransaction> Function(ffi.Pointer<YDoc>, ffi.Uint32,
              ffi.Pointer<ffi.Char>)>>('ydoc_write_transaction');
  late final _ydoc_write_transaction = _ydoc_write_transactionPtr.asFunction<
      ffi.Pointer<YTransaction> Function(
          ffi.Pointer<YDoc>, int, ffi.Pointer<ffi.Char>)>();

  /// Returns a list of subdocs existing within current document.
  ffi.Pointer<ffi.Pointer<YDoc>> ytransaction_subdocs(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Uint32> len,
  ) {
    return _ytransaction_subdocs(
      txn,
      len,
    );
  }

  late final _ytransaction_subdocsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<YDoc>> Function(ffi.Pointer<YTransaction>,
              ffi.Pointer<ffi.Uint32>)>>('ytransaction_subdocs');
  late final _ytransaction_subdocs = _ytransaction_subdocsPtr.asFunction<
      ffi.Pointer<ffi.Pointer<YDoc>> Function(
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Uint32>)>();

  /// Commit and dispose provided read-write transaction. This operation releases allocated resources,
  /// triggers update events and performs a storage compression over all operations executed in scope
  /// of a current transaction.
  void ytransaction_commit(
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ytransaction_commit(
      txn,
    );
  }

  late final _ytransaction_commitPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<YTransaction>)>>(
          'ytransaction_commit');
  late final _ytransaction_commit = _ytransaction_commitPtr
      .asFunction<void Function(ffi.Pointer<YTransaction>)>();

  /// Returns `1` if current transaction is of read-write type.
  /// Returns `0` if transaction is read-only.
  int ytransaction_writeable(
    ffi.Pointer<YTransaction> txn,
  ) {
    return _ytransaction_writeable(
      txn,
    );
  }

  late final _ytransaction_writeablePtr = _lookup<
          ffi.NativeFunction<ffi.Uint8 Function(ffi.Pointer<YTransaction>)>>(
      'ytransaction_writeable');
  late final _ytransaction_writeable = _ytransaction_writeablePtr
      .asFunction<int Function(ffi.Pointer<YTransaction>)>();

  /// Gets a reference to shared data type instance at the document root-level,
  /// identified by its `name`, which must be a null-terminated UTF-8 compatible string.
  ///
  /// Returns `NULL` if no such structure was defined in the document before.
  ffi.Pointer<Branch> ytype_get(
    ffi.Pointer<YTransaction> txn,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _ytype_get(
      txn,
      name,
    );
  }

  late final _ytype_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(
              ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>>('ytype_get');
  late final _ytype_get = _ytype_getPtr.asFunction<
      ffi.Pointer<Branch> Function(
          ffi.Pointer<YTransaction>, ffi.Pointer<ffi.Char>)>();

  /// Gets or creates a new shared `YText` data type instance as a root-level type of a given document.
  /// This structure can later be accessed using its `name`, which must be a null-terminated UTF-8
  /// compatible string.
  ffi.Pointer<Branch> ytext(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _ytext(
      doc,
      name,
    );
  }

  late final _ytextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(
              ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>>('ytext');
  late final _ytext = _ytextPtr.asFunction<
      ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>();

  /// Gets or creates a new shared `YArray` data type instance as a root-level type of a given document.
  /// This structure can later be accessed using its `name`, which must be a null-terminated UTF-8
  /// compatible string.
  ///
  /// Use [yarray_destroy] in order to release pointer returned that way - keep in mind that this will
  /// not remove `YArray` instance from the document itself (once created it'll last for the entire
  /// lifecycle of a document).
  ffi.Pointer<Branch> yarray(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _yarray(
      doc,
      name,
    );
  }

  late final _yarrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(
              ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>>('yarray');
  late final _yarray = _yarrayPtr.asFunction<
      ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>();

  /// Gets or creates a new shared `YMap` data type instance as a root-level type of a given document.
  /// This structure can later be accessed using its `name`, which must be a null-terminated UTF-8
  /// compatible string.
  ///
  /// Use [ymap_destroy] in order to release pointer returned that way - keep in mind that this will
  /// not remove `YMap` instance from the document itself (once created it'll last for the entire
  /// lifecycle of a document).
  ffi.Pointer<Branch> ymap(
    ffi.Pointer<YDoc> doc,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _ymap(
      doc,
      name,
    );
  }

  late final _ymapPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Branch> Function(
              ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>>('ymap');
  late final _ymap = _ymapPtr.asFunction<
      ffi.Pointer<Branch> Function(ffi.Pointer<YDoc>, ffi.Pointer<ffi.Char>)>();
